--- a/app/src/main/res/drawable/background_card_border.xml
+++ b/app/src/main/res/drawable/background_card_border.xml
@@ -5,6 +5,6 @@
     <corners android:radius="16dp"/>
 
     <stroke android:width="1dp"
-        android:color="@color/white"/>
+        android:color="@color/colorWhite"/>
 
 </shape>
