--- a/app/src/main/res/drawable/background_dialog_blue.xml
+++ b/app/src/main/res/drawable/background_dialog_blue.xml
@@ -8,6 +8,6 @@
         android:width="8dp"
         android:color="@android:color/transparent" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/colorWhite" />
 
 </shape>
