--- a/app/src/main/res/layout/fragment_rate_drunk.xml
+++ b/app/src/main/res/layout/fragment_rate_drunk.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="@string/text_daily_dose_water_drunk"
-        android:textColor="@color/white"
+        android:textColor="@color/colorWhite"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:textColor="@color/white"
+        android:textColor="@color/colorWhite"
         android:textSize="46sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:layout_marginTop="40dp"
         android:text="@string/text_continue"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWaterRate" />
