--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#0257c9</color>
+    <color name="colorBlack">#FF000000</color>
+    <color name="colorWhite">#FFFFFFFF</color>
 
-    <color name="gray">#989898</color>
+    <color name="colorGrayVariant1">#989898</color>
     <color name="colorGrayVariant2">#4D4E52</color>
+
+    <color name="colorBlueVariant1">#012677</color>
+    <color name="colorBlueVariant2">#1275D3</color>
+    <color name="colorBlueVariant3">#4D95DB</color>
+    <color name="colorBlueVariant4">#012779</color>
+    <color name="colorBlueVariant5">#274C9B</color>
 
 </resources>
