--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,11 @@
     <color name="colorBlueVariant3">#4D95DB</color>
     <color name="colorBlueVariant4">#012779</color>
     <color name="colorBlueVariant5">#274C9B</color>
+    <color name="colorBlueVariant6">#07C9E2</color>
+    <color name="colorBlueVariant7">#14ACE0</color>
+    <color name="colorBlueVariant8">#1995F9</color>
+    <color name="colorBlueVariant9">#0577AE</color>
+    <color name="colorBlueVariant10">#0D62B6</color>
+    <color name="colorBlueVariant11">#CCEAFF</color>
 
 </resources>
