--- a/app/src/main/res/layout/fragment_calculation.xml
+++ b/app/src/main/res/layout/fragment_calculation.xml
@@ -84,7 +84,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
-        tools:text="2400 slakdfjalksdjfaklsdjfaskdlfjaskldfjskljaf" />
+        tools:text="2400" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvEdit"
