--- a/app/src/main/res/layout/item_beverages.xml
+++ b/app/src/main/res/layout/item_beverages.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/ivIcon"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                app:srcCompat="@drawable/ic_cup" />
+                app:srcCompat="@drawable/ic_cup_water" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvName"
