--- a/app/src/main/res/layout/item_home_container.xml
+++ b/app/src/main/res/layout/item_home_container.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_marginVertical="6dp"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvIntervalTitle"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:textColor="@color/colorWhite"
         android:textSize="16sp"
-        tools:text="@string/interval_breakfast" />
+        app:fontFamily="@font/jet_brains_mono_regular"
+        tools:text="@string/home_chooseDrink" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        tools:listitem="@layout/item_cups" />
+        android:layout_marginTop="12dp"
+        android:clipToPadding="false"
+        android:paddingStart="8dp"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_cup" />
+
+
 </LinearLayout>
