--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="colorGrayVariant1">#989898</color>
     <color name="colorGrayVariant2">#4D4E52</color>
+    <color name="colorGrayVariant3">#82A6DE</color>
 
     <color name="colorBlueVariant1">#012677</color>
     <color name="colorBlueVariant2">#1275D3</color>
